application-group-by-state

--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@ STATIC_ROUTE="/public"
 STATIC_DIR="./public"
 
 SECRET_KEY="t-cardsecrete_kiiee"
+
+BOT_TOKEN = "8167186092:AAHR7f8gZ-70BYt5TIEdSBXe1qDxE646pZI"
+BOT_ID = "@tcardbackendbot"
+CHANNEL_ID = 123
+ADMIN_USER_ID = 123
+TMA_URL = "https://tcard-frontend.vercel.app/"
